syntax = "proto3";
package tmcs_msg;

message NewSession{
    string pubkey = 1;
    int64 lifeTime = 2;
    bool group = 3;
}

message SignedMsg{

    // Protobuf binary of {MsgPackage}, not encrypted
    bytes message = 1;
    string fingerPrint = 2;
    string sender = 3;
    // Signature of message binary
    string sign = 4;
    enum MsgType{
        Message = 0;
        Receipt = 1;
    }
    MsgType type = 5;
}

message MsgPackage{
    repeated MsgReceipt receipts = 1;
    repeated Message messages = 2;
}

message Message{
    string msgId = 1;
    // PGP fingerprint of receiver
    string receiver = 2;
    // Message body encrypted with sender's private key
    bytes encryptedMsg = 3;
}

message Connect{
    string fingerPrint = 1;
}

message JoinSession{
    string pubkey = 1;
    string token = 2;
    string targetFingerPrint = 3;

}

message MsgReceipt{
    string msgId = 1;
    enum MsgState{
        Lost = 0;
        Received = 1;
        Timeout = 2;
    }
    MsgState state = 2;
}